Should have improved drawing component and hopefully fixed redirect on iOS which doesn't work

--- a/src/react/flotion/src/App.css
+++ b/src/react/flotion/src/App.css
@@ -180,3 +180,7 @@
     height: calc(var(--vh, 1vh) * 100);
     margin: 0 20px;
 }
+
+.contentsHeight {
+    min-height: calc((var(--vh, 1vh) * 100) - 40px);
+}
